# zxnext-wip

./: .gitignore  CMakeLists.txt  Makefile  README.md  dumpnex.py  zpragma.inc
assets/: convert.py
cmake/: next.cmake
demos/: animation.c  bit_test.c  composite.c  multiple-sprites.c  multiple-sprites2.c  rotation.c  scaling.c
include/: mysong.asm  sprites.h  zxnext_layer2.h
music/: mario.aks  outrun.aks  outrun2.aks
src/: animation.c  layer2.c  main.c  sprites.c  stuff.asm
